--- a/ranch/redhat/citool-config/source-destination-map.yaml
+++ b/ranch/redhat/citool-config/source-destination-map.yaml
@@ -33,3 +33,7 @@ destroy:
 
   - source: "pipeline.log"
     destination: pipeline.log
+
+  # TFT-2413 - critical files to be present for our users
+  - source: "results-junit.xml"
+    verify: "true"
