--- a/terragrunt/environments/staging/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/staging/artemis/config/variables_images.yaml
@@ -71,3 +71,11 @@ composes:
       image: CentOS Stream 9 x86_64 20240318
     aarch64:
       image: CentOS Stream 9 aarch64 20240318
+
+  centos_stream_10:
+    compose: CentOS-Stream-10
+
+    x86_64:
+      image: CentOS Stream 10 x86_64 20240228
+    aarch64:
+      image: CentOS Stream 10 aarch64 20240228
