--- a/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
+++ b/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
@@ -1,3 +1,3 @@
 - name: Enable CRB repository
   command: "dnf config-manager --enable crb"
-  when: "IMAGE_NAME|lower|regex_search('centos.stream.9')"
+  when: "IMAGE_NAME|lower|regex_search('(centos.stream.9|centos.stream.10)')"
