--- a/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
+++ b/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
@@ -6,6 +6,7 @@
   when:
     - 'ansible_distribution == "CentOS"'
     - "not IMAGE_NAME|lower|regex_search('centos.stream.9')"
+    - "not IMAGE_NAME|lower|regex_search('centos.stream.10')"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
