Add workarounds for CentOS Stream 10
* add repositories manually, mirrorlist does not yet work
* install beakerlib from cs9, there is not copr chroot yet for it
* do not add epel, it does not yet exist

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -8,6 +8,7 @@
   # Disabled 2023-08-10, breaks after reverting back to dnf4, might be needed later once dnf5 lands
   # - include_tasks: workaround-fedora-rawhide.yaml
   - include_tasks: workaround-fedora-release.yaml
+  - include_tasks: workaround-centos-10.yaml
   - include_tasks: update-and-restart.yaml
   - include_tasks: workaround-dns.yaml
   - include_tasks: workaround-beakerlib.yaml
