--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yaml
@@ -9,4 +9,5 @@
     - 'ansible_distribution == "CentOS"'
     - 'ansible_distribution_major_version | int >= 8'
     - "not IMAGE_NAME|lower|regex_search('centos.stream.9')"
+    - "not IMAGE_NAME|lower|regex_search('centos.stream.10')"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
