--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -5,11 +5,27 @@
       - koji
     state: present
   when:
-  - 'ansible_distribution == "Fedora" or
-     ansible_distribution == "CentOS" or
-     ansible_distribution == "OracleLinux"'
-  # we do not want to install Koji on Automotive images
-  - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - 'ansible_distribution == "Fedora" or
+       ansible_distribution == "CentOS" or
+       ansible_distribution == "OracleLinux"'
+    # we do not want to install Koji on Automotive images
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
+    # On CentOS Stream 10 we need a worakroundA
+    - "not IMAGE_NAME|lower|regex_search('centos.stream.10')"
+  retries: "{{ pkg_retry_count }}"
+  delay: "{{ pkg_retry_delay }}"
+  until: result_package is succeeded
+  register: result_package
+
+- name: Install Koji on Centos Stream 10 from Fedora 40 (workaround)
+  command: >
+    rpm -ivh https://kojipkgs.fedoraproject.org//packages/koji/1.34.0/1.fc40/noarch/koji-1.34.0-1.fc40.noarch.rpm
+             https://kojipkgs.fedoraproject.org//packages/koji/1.34.0/1.fc40/noarch/python3-koji-1.34.0-1.fc40.noarch.rpm
+             https://kojipkgs.fedoraproject.org//packages/python-requests-gssapi/1.2.3/11.fc40/noarch/python3-requests-gssapi-1.2.3-11.fc40.noarch.rpm
+             https://kojipkgs.fedoraproject.org//packages/python-gssapi/1.7.3/8.fc40/x86_64/python3-gssapi-1.7.3-8.fc40.x86_64.rpm
+             https://kojipkgs.fedoraproject.org//packages/python-decorator/5.1.1/9.fc40/noarch/python3-decorator-5.1.1-9.fc40.noarch.rpm
+  when:
+    - "IMAGE_NAME|lower|regex_search('centos.stream.10')"
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
   until: result_package is succeeded
