--- a/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yaml
+++ b/ranch/public/citool-config/guest-setup/pre-artifact-installation/workaround-beakerlib.yaml
@@ -10,6 +10,7 @@
 
   - name: Add beakerlib copr repository for CentOS Stream
     command: "dnf -y copr enable packit/beakerlib-beakerlib-master"
+    when: "not IMAGE_NAME|lower|regex_search('centos.stream.10')"
 
   # workaround TFT-1284
   - name: Install beakerlib
@@ -18,5 +19,15 @@
     delay: "{{ pkg_retry_delay }}"
     until: result_package is succeeded
     register: result_package
+    when: "not IMAGE_NAME|lower|regex_search('centos.stream.10')"
+
+  # workaround: install beakerlib from cs9, it is not yet available
+  - name: Install cs9 beakerlib on cs10
+    command: "rpm -ivh --nodeps https://download.copr.fedorainfracloud.org/results/packit/beakerlib-beakerlib-master/centos-stream-9-x86_64/06638579-beakerlib/beakerlib-1.29.3-1.20231115114836990954.master.13.g89675cb.el9.noarch.rpm"
+    retries: "{{ pkg_retry_count }}"
+    delay: "{{ pkg_retry_delay }}"
+    until: result_package is succeeded
+    register: result_package
+    when: "IMAGE_NAME|lower|regex_search('centos.stream.10')"
 
   when: "IMAGE_NAME|lower|regex_search('centos.stream')"
