--- a/.envrc
+++ b/.envrc
@@ -61,11 +61,12 @@ export TF_VAR_ansible_vault_secrets_root="$PROJECT_ROOT/secrets"
 export TF_VAR_gitlab_testing_farm_bot="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.gitlab.testing_farm_bot_terragrunt.token)"
 
 #
-# Testing Farm tokens
+# Testing Farm
 #
-export TESTING_FARM_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.public.bot_api_key)"
+export TESTING_FARM_PRODUCTION_API_URL="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.public.api_url)"
+export TESTING_FARM_PRODUCTION_API_TOKEN_PUBLIC="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.public.bot_api_key)"
 # NOTE: this is not used currently, but we plan to use it later
-export TESTING_FARM_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.redhat.bot_api_key)"
+export TESTING_FARM_PRODUCTION_API_TOKEN_REDHAT="$(ansible-vault view --vault-password-file .vault_pass secrets/credentials.yaml | yq -r .credentials.testing_farm.ranch.redhat.bot_api_key)"
 
 #
 # gitlab-ci-linter
