dev: Unify citool-config with production
This was found why comparing changes from testing-farm branch
production.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/dev/worker/citool-config/artemis-user-data.yaml
+++ b/terragrunt/environments/dev/worker/citool-config/artemis-user-data.yaml
@@ -1,3 +1,10 @@
 ---
 COLDSTORE_URL: "{{ COLDSTORE_URL }}"
+# https://cyborg.pages.redhat.com/documentation/aws/tagging/
 ServiceName: "{{ ServiceName }}"
+BusinessUnit: >-
+  {% if TESTING_FARM_REQUEST_USERNAME %}
+    {{ TESTING_FARM_REQUEST_USERNAME }}
+  {% else %}
+    unknown
+  {% endif %}
