--- a/terragrunt/environments/dev/worker/citool-config/overall-result-map.yaml
+++ b/terragrunt/environments/dev/worker/citool-config/overall-result-map.yaml
@@ -20,11 +20,22 @@
     and "Did not find any plans" in ERROR_MESSAGE
   result: error
 
-
 - rule: >
     EXISTS('ERROR_MESSAGE')
     and ERROR_MESSAGE
     and "Failed to get plan details" in ERROR_MESSAGE
   result: skipped
+
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "TMT metadata are absent or corrupted." in ERROR_MESSAGE
+  result: error
+
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Multiple provision phases not supported, refusing to continue." in ERROR_MESSAGE
+  result: error
 
 # Default hard-coded rules apply for the rest, based on the test results.
