--- a/terragrunt/environments/dev/worker/citool-config/state-map.yaml
+++ b/terragrunt/environments/dev/worker/citool-config/state-map.yaml
@@ -26,5 +26,25 @@
     and "Failed to get plan details" in ERROR_MESSAGE
   state: complete
 
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "TMT metadata are absent or corrupted." in ERROR_MESSAGE
+  state: complete
+
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Multiple provision phases not supported, refusing to continue." in ERROR_MESSAGE
+  state: complete
+
+# TFT-2202 - treat provisioning errors as test failures
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Artemis resource ended in 'error' state" in ERROR_MESSAGE
+    and EXISTS('TESTING_FARM_FAILED_IF_PROVISION_ERROR')
+    and TESTING_FARM_FAILED_IF_PROVISION_ERROR
+  state: complete
 
 # Default hard-coded rules apply for the rest - "error" when FAILURE exists, "complete" otherwise
