--- a/tests/worker/base-scenarios/base-tmt_pipeline.yaml
+++ b/tests/worker/base-scenarios/base-tmt_pipeline.yaml
@@ -12,10 +12,11 @@ pipeline: |
   ansible
   artemis
   fedora-copr:copr
-  guest-setup-testing-farm:guest-setup
   install-copr-build
   install-koji-build-execute
   install-repository
+  guest-setup-testing-farm:guest-setup
+  guest-setup-order
   git
   coldstore
   testing-farm-request-state-reporter
