ranch/public/citool-config: unify with development
To make it easy to port it later to main.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/public/citool-config/guest-setup/post-artifact-installation/install-doggo.yaml
+++ b/ranch/public/citool-config/guest-setup/post-artifact-installation/install-doggo.yaml
@@ -16,6 +16,7 @@
       register: result_download_doggo
 
     - name: "Start doggo"
-      shell: nohup /usr/local/bin/doggo --pushgateway-url http://pushgateway.dev.testing-farm.io:9091/ --request-id {{ TESTING_FARM_REQUEST_ID }} &>/var/tmp/doggo.log &
+      shell: nohup /usr/local/bin/doggo --pushgateway-url http://pushgateway.dev.testing-farm.io:9091/ \
+             --request-id {{ TESTING_FARM_REQUEST_ID }} &>/var/tmp/doggo.log &
 
   when: ansible_distribution == "Fedora"
