--- a/ranch/public/citool-config/guest-setup/post-artifact-installation/create_test_repository.yaml
+++ b/ranch/public/citool-config/guest-setup/post-artifact-installation/create_test_repository.yaml
@@ -36,6 +36,6 @@
         description: Test artifacts repository
         baseurl: file:///var/share/test-artifacts
         priority: 1
-        gpgcheck: no
+        gpgcheck: false
 
   when: rpms_available.rc == 0
