source-destination-map: add tmt-run.log to in progress archiving

--- a/ranch/public/citool-config/source-destination-map.yaml
+++ b/ranch/public/citool-config/source-destination-map.yaml
@@ -27,6 +27,8 @@ progress:
 
   - source: "work-*/console-*"
 
+  - source: "work-*/tmt-run.log"
+
   - source: "results.xml"
     destination: results.xml
 
