--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,16 @@ yamllint = "^1.29.0"
 [tool.poetry.dev-dependencies]
 yamllint = "^1.28.0"
 
+[tool.pytest.ini_options]
+addopts = "--strict-markers"
+markers = [
+    "compose",
+    "hardware",
+    "pipeline",
+    "public",
+    "redhat"
+]
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
